[package]
name = "pixel-sort"
version = "0.1.0"
edition = "2021"

[lib]
name = "pixel_sort"
path = "src/lib.rs"

[[bin]]
name = "pixel-sort-cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.24"
rand = "0.8.5"
structopt = "0.3"